# screc

./: .gitignore  Cargo.toml  README.md
.github/scripts/: ci-prebuild.sh
.github/workflows/: ci.yml  release.yml
crates/screc-cli/: Cargo.toml
crates/screc-cli/src/: main.rs
crates/screc-core/: Cargo.toml
crates/screc-core/src/: config.rs  downloader.rs  lib.rs  stripchat.rs  utils.rs
crates/screc-gui/: Cargo.toml
crates/screc-gui/src/: gui.rs  main.rs  shared_state.rs
src/: config.rs  downloader.rs  gui_logger.rs  lib.rs  main.rs  shared_state.rs  stripchat.rs  utils.rs
