[package]
name = "screc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "cookies", "socks"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
base64 = "0.22.1"
m3u8-rs = "6.0"
url = "2.5.7"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.99"
log = "0.4.27"
fern = "0.7.1"
colored = "3.0.0"
clap = { version = "4.5.46", features = ["derive"] }
