[package]
name = "screc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
    "fs",
    "io-util",
] }
reqwest = { version = "0.12.24", features = ["json", "cookies", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
base64 = "0.22.1"
m3u8-rs = "6.0"
url = "2.5.7"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
log = "0.4.28"
fern = "0.7.1"
colored = "3.0"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
rand = "0.9.2"

# 二进制大小优化配置
[profile.release]
# 启用 LTO（链接时优化），可以移除死代码并减少二进制大小
lto = true
# 优化目标改为大小，而不是速度 ("z" 比 "s" 更激进地优化大小)
opt-level = "z"
# 减少并行代码生成单元到1，允许更多优化
codegen-units = 1
# 出现 panic 时直接终止，而不是展开堆栈，可以移除展开相关代码
panic = "abort"
# 从二进制文件中移除符号信息
strip = true
