[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
screc-core = { path = "crates/screc-core" }
tokio = { version = "1.52.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
anyhow = "1.0.102"
log = "0.4.29"
fern = "0.7.1"
chrono = { version = "0.4.44" }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json", "cookies", "socks"] }
sha2 = "0.11.0"
base64 = "0.22.1"
m3u8-rs = "6.0"
url = "2.5.8"
rand = "0.10.1"
regex = "1.12.3"
clap = { version = "4.6.1", features = ["derive"] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# 二进制大小优化配置
[profile.release]
# 启用 LTO（链接时优化），可以移除死代码并减少二进制大小
lto = true
# 优化目标改为大小，而不是速度 ("z" 比 "s" 更激进地优化大小)
opt-level = "z"
# 减少并行代码生成单元到1，允许更多优化
codegen-units = 1
# 出现 panic 时直接终止，而不是展开堆栈，可以移除展开相关代码
panic = "abort"
# 从二进制文件中移除符号信息
strip = true
