[package]
name = "screc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screc"
path = "src/main.rs"

[dependencies]
screc-core.workspace = true
tokio = { workspace = true, features = ["signal"] }
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
