[package]
name = "screc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "fs",
    "io-util",
] }
reqwest = { version = "0.13.2", features = ["json", "cookies", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
base64 = "0.22.1"
m3u8-rs = "6.0"
url = "2.5.8"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
log = "0.4.29"
fern = "0.7.1"
rand = "0.10.0"
regex = "1.12.3"
