[package]
name = "screc-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
m3u8-rs.workspace = true
url.workspace = true
chrono = { workspace = true, features = ["serde"] }
anyhow.workspace = true
log.workspace = true
fern.workspace = true
rand.workspace = true
regex.workspace = true
