[package]
name = "screc-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screc-gui"
path = "src/main.rs"

[dependencies]
screc-core = { path = "../screc-core" }
tokio = { version = "1.50.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
anyhow = "1.0.102"
log = "0.4.29"
fern = "0.7.1"
chrono = "0.4.44"
serde_json = "1.0.149"
colored = "3.1.1"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
