[package]
name = "screc-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "screc-gui"
path = "src/main.rs"

[dependencies]
screc-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
log.workspace = true
fern.workspace = true
chrono.workspace = true
serde_json.workspace = true
colored.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui_platform.workspace = true
gpui-component-assets.workspace = true
